# navfusion-lab

./: README.md  pyproject.toml
docs/: architecture.md  calibration.md  examples.md  experiment_manager.md  fault_detection.md  filter_design.md  filter_reference.md  gating_and_consistency.md  known_limitations.md  limitations.md  matlab_simulink_handoff.md  matlab_simulink_notes.md  metrics.md  navigation_frames.md  reporting.md  sensor_models.md  trajectory_models.md  tuning_guide.md
docs/tutorials/: advanced_filters.md
examples/configs/: advanced_filter_comparison.json  alpha_beta_gamma_baseline.json  async_sensor_rates.json  ekf_imu_gps_baro.json  filter_comparison.json  gnss_pseudorange_ekf.json  gps_dropout.json  gps_outlier_burst.json  high_imu_bias.json  magnetometer_disturbance.json  multi_experiment.json  radar_doppler_aiding.json  range_beacon_ekf.json  ukf_nonlinear_measurement.json
fusion_sandbox/: __init__.py  cli.py  config.py  frames.py  io.py  math_utils.py  model.py  pipeline.py  schema.py
fusion_sandbox/analysis/: consistency.py  metrics.py  observability.py  residuals.py
fusion_sandbox/calibration/: __init__.py  noise.py
fusion_sandbox/datasets/: __init__.py  c_header.py  events.py
fusion_sandbox/experiments/: __init__.py  manager.py
fusion_sandbox/fdir/: __init__.py  health.py
fusion_sandbox/filters/: __init__.py  base.py  (+10 more)
matlab/: README.md  ekf_predict.m  ekf_update_baro.m  ekf_update_gps.m  ekf_update_gps_range_bearing.m  generate_reference_data.m  run_demo.m  ukf_predict_update.m
simulink/: README.md
tests/: test_fusion.py
(+225 files in other folders)
