[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fusion-sandbox"
version = "0.2.0"
description = "Navigation state-estimation and sensor-fusion sandbox with trajectory, sensor, and filter studies."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Avi Patel" }]
dependencies = ["numpy>=1.24"]

[project.scripts]
fusion-sandbox = "fusion_sandbox.cli:main"
